fix styles add gaps and center position

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -1,5 +1,8 @@
 .app{
   margin: 0 auto;
   min-width: 770px;
-  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: Min(21px, 1.5rem);
 }
