--- a/src/app/Controls/Controls.scss
+++ b/src/app/Controls/Controls.scss
@@ -1,3 +1,5 @@
 .controls{
-
+    display: flex;
+    justify-content: space-evenly;
+    gap: 1rem;
 }
